crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_inside_blockquote_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..58
  BLOCK_QUOTE@0..58
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK_DIV@2..58
      HTML_BLOCK_TAG@2..32
        TEXT@2..6 "<div"
        WHITESPACE@6..7 " "
        HTML_ATTRS@7..30
          TEXT@7..11 "id=\""
          ATTR_ID@11..15 "warn"
          TEXT@15..16 "\""
          WHITESPACE@16..17 " "
          TEXT@17..24 "class=\""
          ATTR_CLASS@24..29 "alert"
          TEXT@29..30 "\""
        TEXT@30..31 ">"
        NEWLINE@31..32 "\n"
      PARAGRAPH@32..49
        LINE_PREFIX@32..33 ">"
        LINE_PREFIX@33..34 " "
        TEXT@34..40 "Hello "
        EMPHASIS@40..47
          EMPHASIS_MARKER@40..41 "*"
          TEXT@41..46 "world"
          EMPHASIS_MARKER@46..47 "*"
        TEXT@47..48 "."
        NEWLINE@48..49 "\n"
      HTML_BLOCK_TAG@49..58
        LINE_PREFIX@49..50 ">"
        LINE_PREFIX@50..51 " "
        TEXT@51..57 "</div>"
        NEWLINE@57..58 "\n"
