crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_slash_blockquote_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..40
  BLOCK_QUOTE@0..40
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK@2..20
      HTML_BLOCK_TAG@2..20
        TEXT@2..19 "<div id=\"outer\"/>"
        NEWLINE@19..20 "\n"
    BLOCK_QUOTE_MARKER@20..21 ">"
    BLANK_LINE@21..22
      BLANK_LINE@21..22 "\n"
    BLOCK_QUOTE_MARKER@22..23 ">"
    WHITESPACE@23..24 " "
    PARAGRAPH@24..33
      TEXT@24..30 "inside"
      NEWLINE@30..31 "\n"
      LINE_PREFIX@31..32 ">"
      LINE_PREFIX@32..33 " "
    HTML_BLOCK@33..40
      HTML_BLOCK_TAG@33..40
        TEXT@33..39 "</div>"
        NEWLINE@39..40 "\n"
