crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_slash_blockquote_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..40
  BLOCK_QUOTE@0..40
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK_DIV@2..40
      HTML_BLOCK_TAG@2..20
        TEXT@2..6 "<div"
        WHITESPACE@6..7 " "
        HTML_ATTRS@7..17
          TEXT@7..11 "id=\""
          ATTR_ID@11..16 "outer"
          TEXT@16..17 "\""
        TEXT@17..18 "/"
        TEXT@18..19 ">"
        NEWLINE@19..20 "\n"
      BLANK_LINE@20..22
        LINE_PREFIX@20..21 ">"
        BLANK_LINE@21..22 "\n"
      PARAGRAPH@22..31
        LINE_PREFIX@22..23 ">"
        LINE_PREFIX@23..24 " "
        TEXT@24..30 "inside"
        NEWLINE@30..31 "\n"
      HTML_BLOCK_TAG@31..40
        LINE_PREFIX@31..32 ">"
        LINE_PREFIX@32..33 " "
        TEXT@33..39 "</div>"
        NEWLINE@39..40 "\n"
