crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_slash_matched_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..44
  HTML_BLOCK_DIV@0..37
    HTML_BLOCK_TAG@0..19
      TEXT@0..4 "<div"
      WHITESPACE@4..5 " "
      HTML_ATTRS@5..15
        TEXT@5..9 "id=\""
        ATTR_ID@9..14 "outer"
        TEXT@14..15 "\""
      WHITESPACE@15..16 " "
      TEXT@16..17 "/"
      TEXT@17..18 ">"
      NEWLINE@18..19 "\n"
    PARAGRAPH@19..30
      STRONG@19..29
        STRONG_MARKER@19..21 "**"
        TEXT@21..27 "inside"
        STRONG_MARKER@27..29 "**"
      NEWLINE@29..30 "\n"
    HTML_BLOCK_TAG@30..37
      TEXT@30..36 "</div>"
      NEWLINE@36..37 "\n"
  BLANK_LINE@37..38
    BLANK_LINE@37..38 "\n"
  PARAGRAPH@38..44
    TEXT@38..43 "after"
    NEWLINE@43..44 "\n"
