crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_slash_multiline_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..36
  HTML_BLOCK_DIV@0..36
    HTML_BLOCK_TAG@0..21
      TEXT@0..4 "<div"
      NEWLINE@4..5 "\n"
      WHITESPACE@5..7 "  "
      HTML_ATTRS@7..17
        TEXT@7..11 "id=\""
        ATTR_ID@11..16 "outer"
        TEXT@16..17 "\""
      NEWLINE@17..18 "\n"
      HTML_ATTRS@18..19
        TEXT@18..19 "/"
      TEXT@19..20 ">"
      NEWLINE@20..21 "\n"
    BLANK_LINE@21..22
      BLANK_LINE@21..22 "\n"
    PARAGRAPH@22..29
      TEXT@22..28 "inside"
      NEWLINE@28..29 "\n"
    HTML_BLOCK_TAG@29..36
      TEXT@29..35 "</div>"
      NEWLINE@35..36 "\n"
