crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_slash_nested_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..54
  HTML_BLOCK@0..54
    HTML_BLOCK_TAG@0..54
      TEXT@0..53 "<div id=\"outer\"><div  ..."
      NEWLINE@53..54 "\n"
